src/objects/Agreement_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>placeholder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Agreement Details</relationshipLabel>
        <relationshipName>Agreement_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approved_Approval_Status__c</fullName>
        <label>Approved / Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Out for Approve</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Pending Resubmission</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_Type__c</fullName>
        <label>Approver Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Agreement Details</relationshipLabel>
        <relationshipName>Agreement_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Echosign_Document_ID__c</fullName>
        <label>Echosign Document ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name_full_name_of_approver__c</fullName>
        <label>Name (full name of approver)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resend_Date__c</fullName>
        <label>Resend Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Review_Reason__c</fullName>
        <label>Review Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Approver_Name__c</fullName>
        <label>Updated Approver Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Agreement Detail</label>
    <nameField>
        <label>Agreement Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>